project/test/semantics/unit/good/input/Good10_shouldHandleCallsToInstanceMethods.ty
immutable class SomeDummyInstantiableClass {
    
    values: {
        someDummyAttribute: Int = 3;
        anotherDummyAttribute: Int;
    }
    
    functions: {
        someDummyFunction: () -> Int = 22
    }
}

singleton class Methods {
    
    actions: {
        main: () -> Void = {
            val worker: SomeDummyInstantiableClass = SomeDummyInstantiableClass(5);
            System#assertEquals(22, worker.someDummyFunction())
        }
    }
}
